@@ -88,7 +88,7 @@ public class ConverterTest extends TestCase {
 			}
 
 		});
-		assertEquals(new Integer(6), converter.convert(Integer.class, "6"));
+		assertEquals(Integer.valueOf(6), converter.convert(Integer.class, "6"));
 		assertEquals(new File("src").getAbsoluteFile(), converter.convert(File.class, "src"));
 
 		converter.hook(null, new Hook() {
@@ -101,8 +101,8 @@ public class ConverterTest extends TestCase {
 				return null;
 			}
 		});
-		assertEquals(new Integer(1), converter.convert(Integer.class, "6"));
-		assertEquals(new Integer(1), converter.convert(Long.class, "6"));
+		assertEquals(Integer.valueOf(1), converter.convert(Integer.class, "6"));
+		assertEquals(Integer.valueOf(1), converter.convert(Long.class, "6"));
 		assertEquals("6", converter.convert(String.class, "6"));
 	}
 
